feat: update deps

--- a/packages/backend/server/package.json
+++ b/packages/backend/server/package.json
@@ -67,6 +67,7 @@
     "graphql-scalars": "^1.23.0",
     "graphql-upload": "^17.0.0",
     "html-validate": "^8.20.1",
+    "htmlrewriter": "^0.0.12",
     "ioredis": "^5.3.2",
     "is-mobile": "^5.0.0",
     "keyv": "^5.0.0",
@@ -86,6 +87,7 @@
     "ses": "^1.4.1",
     "socket.io": "^4.7.5",
     "stripe": "^17.0.0",
+    "tldts": "^6.1.58",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "yjs": "patch:yjs@npm%3A13.6.18#~/.yarn/patches/yjs-npm-13.6.18-ad0d5f7c43.patch",
