--- a/packages/common/nbstore/package.json
+++ b/packages/common/nbstore/package.json
@@ -8,7 +8,8 @@
     ".": "./src/index.ts",
     "./op": "./src/op/index.ts",
     "./idb": "./src/impls/idb/index.ts",
-    "./idb/v1": "./src/impls/idb/v1/index.ts"
+    "./idb/v1": "./src/impls/idb/v1/index.ts",
+    "./cloud": "./src/impls/cloud/index.ts"
   },
   "dependencies": {
     "@toeverything/infra": "workspace:*",
@@ -18,9 +19,13 @@
     "yjs": "patch:yjs@npm%3A13.6.18#~/.yarn/patches/yjs-npm-13.6.18-ad0d5f7c43.patch"
   },
   "devDependencies": {
-    "idb": "^8.0.0"
+    "@affine/graphql": "workspace:*",
+    "idb": "^8.0.0",
+    "socket.io-client": "^4.7.5"
   },
   "peerDependencies": {
-    "idb": "^8.0.0"
+    "@affine/graphql": "workspace:*",
+    "idb": "^8.0.0",
+    "socket.io-client": "^4.7.5"
   }
 }
