--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -354,8 +354,8 @@ jobs:
           name: affine
           fail_ci_if_error: false
 
-  server-native-test:
-    name: Run server native tests
+  rust-test:
+    name: Run native tests
     runs-on: ubuntu-latest
     env:
       RUSTFLAGS: -D warnings
@@ -746,7 +746,7 @@ jobs:
       - build-server-native
       - build-electron-renderer
       - server-test
-      - server-native-test
+      - rust-test
       - copilot-api-test
       - copilot-e2e-test
       - server-e2e-test
