--- a/packages/backend/server/package.json
+++ b/packages/backend/server/package.json
@@ -17,7 +17,7 @@
     "test:coverage": "c8 ava --concurrency 1 --serial",
     "test:copilot:e2e:coverage": "c8 ava --timeout=5m \"tests/**/copilot-*.e2e.ts\"",
     "test:copilot:spec:coverage": "c8 ava --timeout=5m \"tests/**/copilot-*.spec.ts\"",
-    "test:copilot:e2e:cron": "ava --config \"tests/ava.docker.config.js\" \"tests/**/copilot-*.e2e.ts\"",
+    "test:copilot:e2e:cron": "node ./scripts/copilot-cron-test.js",
     "postinstall": "prisma generate",
     "data-migration": "node --loader ts-node/esm/transpile-only.mjs ./src/data/index.ts",
     "predeploy": "yarn prisma migrate deploy && node --import ./scripts/register.js ./dist/data/index.js run",
@@ -60,6 +60,7 @@
     "@opentelemetry/semantic-conventions": "^1.25.0",
     "@prisma/client": "^5.15.0",
     "@prisma/instrumentation": "^5.15.0",
+    "@slack/web-api": "^7.3.4",
     "@socket.io/redis-adapter": "^8.3.0",
     "ava": "^6.1.2",
     "cookie-parser": "^1.4.6",
@@ -73,8 +74,10 @@
     "html-validate": "^8.20.1",
     "ioredis": "^5.3.2",
     "is-mobile": "^5.0.0",
+    "jsx-slack": "^6.1.1",
     "keyv": "^5.0.0",
     "lodash-es": "^4.17.21",
+    "marked": "^15.0.0",
     "mixpanel": "^0.18.0",
     "mustache": "^4.2.0",
     "nanoid": "^5.0.7",
@@ -91,6 +94,7 @@
     "socket.io": "^4.7.5",
     "stripe": "^17.0.0",
     "supertest": "^7.0.0",
+    "tap-parser": "^18.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "yjs": "patch:yjs@npm%3A13.6.18#~/.yarn/patches/yjs-npm-13.6.18-ad0d5f7c43.patch",
