--- a/.github/helm/affine/charts/graphql/templates/copilot-test.yaml
+++ b/.github/helm/affine/charts/graphql/templates/copilot-test.yaml
@@ -21,6 +21,18 @@ spec:
             image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
             command: ["yarn", "test:copilot:e2e:cron"]
             env:
+              - name: AFFINE_ENV
+                value: "{{ .Release.Namespace }}"
+              - name: SLACK_BOT_TOKEN
+                valueFrom:
+                  secretKeyRef:
+                    name: "{{ .Values.app.copilot.secretName }}"
+                    key: slackBotToken
+              - name: CHANNEL_ID
+                valueFrom:
+                  secretKeyRef:
+                    name: "{{ .Values.app.copilot.secretName }}"
+                    key: slackChannelId
               - name: COPILOT_E2E_ENDPOINT
                 value: "http://{{ include "graphql.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local:3000"
               - name: DATABASE_PASSWORD
