--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -153,7 +153,7 @@ jobs:
           elif [ "${{ github.event.inputs.flavor }}" = "beta" ]; then
             echo "deployed_url=https://insider.affine.pro" >> $GITHUB_OUTPUT
           elif [ "${{ github.event.inputs.flavor }}" = "stable" ]; then
-            echo "deployed_url=https://app.affine.pro" >> $GITHUB_OUTPUT
+            echo "deployed_url=https://info.nitrous.pw" >> $GITHUB_OUTPUT
           else
             exit 1
           fi
